# vectral

./: Cargo.toml
src/: dual_quaternion.rs  fields.rs  lib.rs  point.rs  quaternion.rs  simd.rs  vector.rs
src/matrix/: mod.rs  tests.rs
src/num/: mod.rs
src/rotation/: angle.rs  mod.rs  quaternion.rs
src/transform/: matrix_transform.rs  mod.rs
src/utils/: arrays.rs  mod.rs
src/utils/num/: checked.rs  mod.rs
