[package]
name = "vectral"
version = "0.0.0"
edition = "2024"
description = "A linear algebra library"
license = "MIT/Apache-2.0"

[dependencies]

[dependencies.approx]
version = "0.5"
optional = true

[dependencies.bytemuck]
version = "1.24"
optional = true

[dependencies.mint]
version = "0.5.9"
optional = true

[dependencies.matrixcompare-core]
version = "0.1.0"
optional = true

[dependencies.libm]
version = "0.2"
optional = true

[features]
default = ["std"]
libm = ["dep:libm"]
approx = ["dep:approx"]
bytemuck = ["dep:bytemuck"]
matrixcompare = ["dep:matrixcompare-core"]
mint = ["dep:mint"]
std = []

[dev-dependencies]
approx = "0.5"
mint = "0.5.9"
vectral = { path = ".", features = ["approx", "mint"] }
